# ffmpegTest

./: .gitignore  AudioDecoder.cpp  AudioDecoder.h  AudioFilter.cpp  AudioFilter.h  CMakeLists.txt  OutputAnalysis.cpp  OutputAnalysis.h  Resampler.cpp  Resampler.h  TestForC.c  brokenNotes.txt  changedFilesFilepaths  cmakeResources.txt  ffmpegNotes.txt  main.cpp  main2.cpp  main2.h  notesTerminal.txt  output.txt
Notes/: ffmpegCodeResources.txt  ffmpegNotes.txt  notesTerminal.txt  testCode.txt
Recordings/: tempRecording.aac
Recordings/inputRecordings/: recording3.aac
ffmpeg/: VERSION
ffmpeg/libavutil/: pixfmt.h
